[package]
name = "bpxdump"
version = "0.1.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.0"
#bpx = "3.0.0"
bpx = { path = "../../bpx-rs" }
common = { path = "../common" }

[dev-dependencies]
assert_cmd = "1.0.4"
predicates = "1.0.8"
